css: Fix channel privacy icon gap in first stream created modal.
In the first stream created modal, a channel privacy icon
is displayed alongside the channel name. At different font sizes,
the gap between the icon and the channel name was inconsistent.
This commit fixes the above issue.

--- a/web/styles/modal.css
+++ b/web/styles/modal.css
@@ -133,6 +133,15 @@
     &.simplebar-scrollable-y + .modal__footer {
         border-top: 1px solid var(--color-border-modal-footer);
     }
+
+    .channel-privacy-type-icon {
+        /* This pushes back on suspect styles
+           in app_components.css. A fuller fix
+           will require tracking down other
+           instances of this class. */
+        width: auto;
+        padding-right: 0;
+    }
 }
 
 .modal__button {
